Commit accumulated API updates
